# BTC-Vault-Protocol

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  ORACLE_INTEGRATION_SUMMARY.md  PRIMITIVE_LIQUIDITY_ENGINE_SUMMARY.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  TASK_10_COMPLETION_SUMMARY.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_15_IMPLEMENTATION_SUMMARY.md  TASK_16_IMPLEMENTATION_SUMMARY.md  TASK_17_IMPLEMENTATION_SUMMARY.md  TASK_18_IMPLEMENTATION_SUMMARY.md  TASK_19_IMPLEMENTATION_SUMMARY.md  TASK_20_IMPLEMENTATION_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  deny.toml  requirements.txt  security-audit-report.md
.github/: SECURITY.md  pull_request_template.md
config/: chainlink.py  dashboard.py  monitoring.py  performance.py  security_monitoring.py  treasury.py  validators.py
contracts/cosmos/: Cargo.toml
contracts/cosmos/src/: lib.rs  state.rs  traits.rs
docs/: API_DOCUMENTATION.md  BUSINESS_CONTINUITY.md  COMPLIANCE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_DOCUMENTATION.md  IMMEDIATE_SECURITY_FIXES.md  INCIDENT_RESPONSE.md  INDEX.md  LIQUIDITY_ENGINE.md  MONITORING_ALERTING.md  PROJECT_STATUS.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_REMEDIATION_PLAN.md  SECURITY_RISK_ASSESSMENT.md  SECURITY_TASK_BREAKDOWN.md  TESTING.md  TESTING_STRATEGY.md  TRANSFORMATION_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDES.md
frontend/: next.config.js  package.json  tailwind.config.js
programs/vault/: Anchor.toml  Cargo.toml  audit.toml  build.rs
programs/vault/src/: errors.rs  lib.rs  traits.rs
programs/vault/src/crypto/: ecdsa_validator.rs  mod.rs
programs/vault/src/instructions/: authentication.rs  btc_commitment.rs  enhanced_state_channel.rs  kyc.rs  liquidity_engine.rs  mod.rs  multisig.rs  oracle.rs  payment.rs  rewards.rs  security_monitoring.rs  staking.rs  state_channel.rs  treasury.rs  treasury_management.rs
programs/vault/src/security/: cve_scanner.rs  defense_grade_error_handling.rs  dependency_manager.rs  mod.rs  vulnerability_tracker.rs
programs/vault/src/state/: authentication.rs  btc_commitment.rs  btc_commitment_tests.rs  kyc_compliance.rs  kyc_status.rs  liquidity_engine.rs  mod.rs  multisig_wallet.rs  oracle.rs  payment_system.rs  rewards.rs  security_monitoring.rs  staking_pool.rs  staking_pool_tests.rs  state_channel.rs  treasury.rs  treasury_management.rs  user_account.rs
scripts/: config-manager.py  debug.sh  deploy-liquidity-engine.sh  deploy.sh  migrate.py  monitoring-service.py  rollback.sh  security-audit.ps1  security-audit.sh  test-monitoring.py  test.ps1  test.sh
tests/: integration_test_config.py  run_comprehensive_tests.py  run_integration_tests.py  (+26 more)
(+53 files in other folders)
