[package]
name = "vault-cosmos"
version = "0.1.0"
authors = ["Vault Protocol Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["cranelift"]
cranelift = ["cosmwasm-vm/cranelift"]
singlepass = ["cosmwasm-vm/singlepass"]

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
cosmwasm-vm = { version = "1.5.0", default-features = false }
cw-multi-test = "0.20.0"