[package]
name = "vault"
version = "0.1.0"
description = "Vault Protocol - Non-custodial BTC commitment system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "~1.18.0"
secp256k1 = { version = "0.29.0", features = ["recovery", "global-context"] }
sha2 = "0.10.8"
bs58 = "0.5.1"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2.15", features = ["js"] }

# Security notes:
# - curve25519-dalek vulnerability (RUSTSEC-2024-0344) is in Solana's dependency tree
#   Cannot be patched without breaking Solana compatibility
#   Risk: Timing attack requires local access and specific conditions
#   Mitigation: Acceptable risk for current development phase
# - borsh vulnerability (RUSTSEC-2023-0033) is also in Solana's dependency tree
#   Risk: ZST parsing issue with non-copy/clone types
#   Mitigation: We don't use problematic ZST patterns
# - Unmaintained dependencies (derivative, paste) are transitive dependencies
#   Risk: No security patches for these crates
#   Mitigation: Monitor for alternatives and Solana updates